# newsletter_proto

./: .gitignore  db.sqlite3  pyproject.toml
news/: settings.py  urls.py
news_app/: admin.py  forms.py  models.py  urls.py  views.py
news_app/migrations/: 0001_initial.py
news_app/templates/: author.html  authoradd.html  base.html  generic_form.html  index.html  newsaddform.html
